logs/Slang/generated/keywords/5.6.2--keyword_unique0.sv.log
name: keyword_unique0
description: The 'unique0' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_unique0.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_unique0.sv:8:8: error: expected declarator
    bit unique0;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_unique0.sv:8:9: error: expected member
    bit unique0;
        ^~~~~~~
